[package]
name = "homer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
argh = "0.1.13"
directories = "6.0.0"
futures-util = "0.3.31"
indicatif = "0.17.11"
inquire = "0.7.5"
lazy_static = "1.5.0"
reqwest = {version= "0.12.12", features = ["stream"]}
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.34"
tokio = {version = "1", features = ["full"]}
dirs-sys = "0.5.0"
zip-extract = "0.2.1"
